[package]
name = "bot-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bot-core = { path = "../bot-core", version = "0.1" }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
teloxide = { version = "0.12", features = ["macros", "ctrlc_handler"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
