[package]
name = "bot-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
deadpool-postgres = { version = "0.10", features=["rt_tokio_1", "serde"] }
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.12", features = ["macros", "ctrlc_handler"] }
thiserror = "1.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
